# Meteor

./: .gitignore  AGENTS.md  README.md  mix.exs
assets/: biome.json  package-lock.json  package.json  tsconfig.json
assets/css/: app.css
assets/css/components/: divider.css  game-cover.css  input.css  menu.css
assets/css/core/: config.css
assets/css/effects/: scroll-fade.css
assets/css/libs/: daisy-ui.css  lucide.css  tailwind.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: meteor.ex  meteor_web.ex
lib/meteor/: application.ex  cache.ex  release.ex  repo.ex
lib/meteor/games/: assets.ex  game.ex  games.ex  sgdb.ex  sgdb_game.ex  store.ex
lib/meteor_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/meteor_web/components/: core.ex  core_components.ex  domain.ex  input.ex  layouts.ex  typography.ex
lib/meteor_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/meteor_web/layouts/: layouts.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20260227132215_create_games.exs
scripts/: build.sh  link-binaries.sh
tauri/: package.json
tauri/src/: index.html
tauri/src-tauri/: Cargo.toml  meteor_backend-aarch64-apple-darwin  meteor_backend-x86_64-unknown-linux-gnu  tauri.conf.json
tauri/src-tauri/src/: lib.rs
test/: test_helper.exs
test/meteor/: games_test.exs
test/meteor_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/meteor_web/live/: game_live_test.exs
test/support/: conn_case.ex  data_case.ex
(+14 files in other folders)
