[package]
name = "meteor"
version = "0.1.0"
description = "Custom game launcher"
authors = ["you"]
edition = "2021"

[[bin]]
name = "meteor"
path = "src/main.rs"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.11", features = ["blocking"] }
